--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  background-color: rgb(31, 31, 31);
+  color: rgb(230, 230, 230);
+  font-size: 35px;
+  padding-left: 20px;
 }
