--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   font-family: "SF Compact Display";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(28, 28, 28);
+  background-image: linear-gradient(90deg, #667eea 0%, #764ba2 100%);
   color: rgb(230, 230, 230);
   font-size: 35px;
   padding-left: 20px;
